--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,22 @@
 
 <head>
   <meta charset="utf-8" />
+  <!-- CSS only -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+
   <title>React App</title>
 </head>
 
 <body>
   <div id="container"></div>
+
+  <script type="text/javascript" src="../dist/main.js"></script>
+  <script type="text/javascript" src="../src/js/jquery_3_6_1.js"></script>
+  <script type="text/javascript" src="../src/js/plugins.js"></script><!-- JavaScript Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
