--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Webpack App</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1"><script defer src="dist/main.3809cf3e1ea0af422551.js"></script></head>
+  <meta name="viewport" content="width=device-width, initial-scale=1"><script defer src="shoppingWeb/dist/main.3809cf3e1ea0af422551.js"></script></head>
   <body>
   </body>
 </html>
